--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crypto-coin",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://parvane-sanaie.github.io/crypto-coin/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
@@ -12,6 +13,7 @@
     "@testing-library/react-hooks": "^8.0.0-alpha.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "gh-pages": "^4.0.0",
     "immer": "^9.0.17",
     "invariant": "^2.2.4",
     "lodash": "^4.17.21",
@@ -34,6 +36,8 @@
     "prettier": "^2.8.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
